<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/backgroundBlack">

        <!-- This is for the local time zone -->
        <TextView
            android:id="@+id/localTimeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/welcomeOrange"
            android:text="@string/local_time_text"
            android:layout_marginTop="50dp"
            android:fontFamily="casual"/>

        <TextClock
            android:id="@+id/localTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:textColor="@color/normalTextColor"
            android:textSize="40dp"
            android:textStyle="bold" />


        <!-- this is the horizontal line sepperating the two clocks -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="60dp"
            android:background="@color/welcomeOrange"/>


        <!-- This is for the choosen time zone -->
        <TextView
            android:id="@+id/choosenTimeZone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/choosen_timeZone_text"
            android:textColor="@color/welcomeOrange"
            android:textSize="30dp"
            android:textStyle="bold"
            android:fontFamily="casual"/>

        <TextClock
            android:id="@+id/timeZoneTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:textColor="@color/normalTextColor"
            android:textSize="40dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/changeTimeZone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/custom_button"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/change_timeZone_text"
            android:textColor="@color/normalTextColor"
            android:textSize="20dp"
            android:textStyle="bold"
            android:onClick="goBackToTimeZoneActivity"/>

    </LinearLayout>
</ScrollView>